--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/*.freezed.dart": true,
-    "**/*.g.dart": true,
+    "**/*.freezed.dart": false,
+    "**/*.g.dart": false,
     "**/.gitkeep": true,
     "**/node_modules": true
   },
